--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -32,8 +32,8 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <%= link_to "Kassiopé", "fr-index.html", class: "navbar-brand" %>
-          <a href="fr-index.html">
+          <%= link_to "Kassiopé", "index.html", class: "navbar-brand" %>
+          <a href="index.html">
             <%= image_tag "france-flag.png", class: "france-flag img-circle" %>
           </a>
           <a href="en/en-index.html">
