--- a/source/fr-about_us.html.erb
+++ b/source/fr-about_us.html.erb
@@ -36,6 +36,46 @@ title: Kassiopé Project
       </p>
   </div>
 
+  <div class="partner primary-text">
+    <h2>Un grand merci à tous nos partenaires</h2>
+    <ul>
+      <li>La Section Américaine :</li>
+      <ul>
+        <li>Pour avoir inspiré ce projet à travers l’échange entre MGIS et la Section Américaine du Lycée international</li>
+        <li>Pour avoir lancé le projet avec les 1500€ du “Global Citizen Award”</li>
+      </ul>
+      <li>Manav Sadhna : </li>
+      <ul>
+        <li>Pour l'accueil enthousiaste de notre projet dans leur communauté.</li>
+        <li>Pour nous aider à maintenir ce projet à long terme.</li>
+      </ul>
+      <li>MXOphtalmic : </li>
+      <ul>
+        <li>Pour avoir fait des dons de lunettes</li>
+        <li>Pour avoir fait le don d’un autoréfractomètre</li>
+      </ul>
+      <li>Le Visiologiste :</li>
+      <ul>
+        <li>Pour nous avoir proposé des stages d’entraînements aux tests d’acuité visuelle</li>
+      </ul>
+      <li>The Ahmedabad Eye Laser Hospital :</li>
+      <ul>
+        <li>Pour la supervision de notre projet à Ahmedabad</li>
+      </ul>
+      <li>Brian Ball :</li>
+      <ul>
+        <li>Qui nous a aidé à lancer le projet.</li>
+      </ul>
+      <li>Dr.Prema du Lotus Eye Clinic :</li>
+      <ul>
+        <li>Pour ses conseils et son soutien au projet.</li>
+      </ul>
+      <li>Au support inestimable de nos parents !</li>
+      <li>A tous ceux qui ont soutenu et donné du temps pour ce projet!</li>
+      <li>On ne pourrait pas y arriver sans vous !</li>
+    </ul>
+  </div>
+
   <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
