--- a/source/stylesheets/pages/_action.css.scss
+++ b/source/stylesheets/pages/_action.css.scss
@@ -37,6 +37,17 @@
 }
 
 
+/* try at bootstrap tabs 
+.action {
+    width:100%;
+    overflow:hidden;
+    text-align: center; 
+}
+    .nav nav-tabs {
+        display: inline-block;
+        position:relative
+    }
+*/
 
 
 
