--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -55,7 +55,7 @@
             <li><%= link_to "Notre action", "fr-action.html" %></li>
             <li><%= link_to "Notre aventure", "fr-adventure.html" %></li>
             <li><%= link_to "A propos de nous", "fr-about_us.html" %></li>
-            <li><%= link_to "Nos partenaires", "fr-partners.html" %></li>
+            <li><%= link_to "Presse", "fr-presse.html" %></li>
           </ul>
         </div><!-- /.navbar-collapse -->
       </div><!-- /.container-fluid -->
