--- a/source/layouts/layout_en.erb
+++ b/source/layouts/layout_en.erb
@@ -36,7 +36,7 @@
           <a href="../index.html">
             <%= image_tag "france-flag.png", class: "france-flag img-circle" %>
           </a>
-          <a href="en/en-index.html">
+          <a href="en-index.html">
             <%= image_tag "england-flag.png", class: "england-flag img-circle" %>
           </a>
           <a target="_blank" href="https://www.facebook.com/kassiopeproject/">
@@ -54,7 +54,7 @@
             <li><%= link_to "Our action", "en-action.html" %></li>
             <li><%= link_to "Our adventure", "en-adventure.html" %></li>
             <li><%= link_to "About us", "en-about_us.html" %></li>
-            <li><%= link_to "Our partners", "en-partners.html" %></li>
+            <li><%= link_to "Press", "en-press.html" %></li>
           </ul>
         </div><!-- /.navbar-collapse -->
       </div><!-- /.container-fluid -->
