--- a/source/fr-action.html.erb
+++ b/source/fr-action.html.erb
@@ -19,6 +19,33 @@ title: Kassiopé Project
 
   </div>
 
+<!--
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
+
+<div class="action">
+  <ul class="nav nav-tabs nav-fill">
+    <li class="active"><a data-toggle="tab" href="tab1">Cataracte</a></li>
+    <li><a data-toggle="tab" href="tab2">Refraction</a></li>
+  </ul>
+
+
+  <div class="tab-content">
+    <div id="tab1" class="tab-pane fade in active">
+      <h3>CATARACTE</h3>
+      <p>Some content.</p>
+    </div>
+    <div id="tab2" class="tab-pane fade">
+      <h3>REFRACTION</h3>
+      <p>Some content in menu 1.</p>
+    </div>
+  </div>
+</div>
+-->
+
+
 
 <div class= "text">
   <p>Notre projet cette année est divisé en deux parties: Une portant sur la cataracte et l'autre portant sur la réfraction</p>
@@ -104,7 +131,6 @@ title: Kassiopé Project
   </div>
 -->
 
-
   <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -115,4 +141,9 @@ title: Kassiopé Project
     ga('send', 'pageview');
 
   </script>
+
+  <!-- Placed at the end of the document so the pages load faster -->
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+  <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/js/bootstrap.min.js"></script>
+
 </body>
