--- a/source/stylesheets/pages/_action.css.scss
+++ b/source/stylesheets/pages/_action.css.scss
@@ -37,6 +37,17 @@
 }
 
 
+/* bootstrap failed attempt for tabs
+.action {
+    width:100%;
+    overflow:hidden;
+    text-align: center; 
+}
+    .nav nav-tabs {
+        display: inline-block;
+        position:relative
+    }
+*/
 
 
 
@@ -112,3 +123,5 @@
         .tab.active {
             display:block;
         }
+
+
