--- a/source/en/en-about_us.html.erb
+++ b/source/en/en-about_us.html.erb
@@ -51,6 +51,47 @@ title: Kassiopé Project
         If you have any question or would desire additional informations, please send an email to : <a href="mailto:matthew.morvan@gmail.com" target="_top">matthew.morvan@gmail.com</a>
       </p>
   </div>
+  
+  <div class="partner primary-text">
+    <h2>A heartfelt thank you to our following supporters</h2>
+    <ul>
+      <li>The American section : </li>
+      <ul>
+        <li>For inspiring the project through the MGIS/American Section exchange program.</li>
+        <li>For launching our project with a 1500€ Global Citizen Award.</li>
+      </ul>
+      <li>Manav Sadhna : </li>
+      <ul>
+        <li>For hosting our project in Ahmadabad and helping with coordination.</li>
+        <li>For maintaining our project on a long-term basis.</li>
+      </ul>
+      <li>MXOphtalmic : </li>
+      <ul>
+        <li>For donating glasses for the clinic.</li>
+        <li>For donating an autorefractometer.</li>
+      </ul>
+      <li>Le Visiologiste</li>
+      <ul>
+        <li>For training us on eye exams.</li>
+      </ul>
+      <li>The Ahmedabad Eye Laser Hospital:</li>
+      <ul>
+        <li>For their support and supervision of our clinic in Ahmedabad.</li>
+      </ul>
+      <li>Brian Ball:</li>
+      <ul>
+        <li>For helping us launch the project</li>
+      </ul>
+      <li>Dr.Prema from the Lotus Eye Clinic:</li>
+      <ul>
+        <li>For her advice and support for our project.</li>
+      </ul>
+      <li>For our parents unending help and support.</li>
+      <li>We can not make it without you!</li>
+    </ul>
+  </div>
+
+
   <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
