reposition crowdfunding button

--- a/source/stylesheets/pages/_home.css.scss
+++ b/source/stylesheets/pages/_home.css.scss
@@ -42,6 +42,7 @@ html, body {
 
     .button a, button {
       position: relative;
+      margin-left: 170px;
       width: 200px;
       text-align: center;
       font-style: sans-serif;
