change crowdfunding button position

--- a/source/index.html.erb
+++ b/source/index.html.erb
@@ -23,7 +23,7 @@ title: Kassiopé Project
               </div>
             </div>
           -->
-            <div class="col-xs-12 col-sm-4">
+            <div class="col-xs-12 col-sm-8">
               <div class="button">
                 <a target="_blank" href="https://www.gofundme.com/help-kassiopes-eye-care-center" class="btn btn-warning btn-lg">Soutenez Kassiopé</a>
               </div>
@@ -56,7 +56,7 @@ title: Kassiopé Project
 
               <div class="read scrollReveal feature col-md-4 col-sm-6 col-xs-12">
                 <%= image_tag "read-book-logo.svg", class: "logo-homepage" %>
-                <p>La cataracte est la première cause de césité dans le monde!</p>
+                <p>La cataracte est la première cause de cécité dans le monde!</p>
               </div>
 
               <div class="glasses scrollReveal feature col-md-4 col-xs-12">
