change tab properties

--- a/source/fr-action.html.erb
+++ b/source/fr-action.html.erb
@@ -55,8 +55,8 @@ title: Kassiopé Project
 <!-- Onglets-->
   <div class="tabs">
     <ul class="tab-links">
-        <li class="active"><a href="#tab1">Cataracte</a></li>
-        <li><a href="#tab2">Réfraction</a></li>
+        <li class="col-6 active"><a href="#tab1">Cataracte</a></li>
+        <li class="col-6"><a href="#tab2">Réfraction</a></li>
     </ul>
 
     <div class="tab-content primary-text">
