--- a/source/fr-adventure.html.erb
+++ b/source/fr-adventure.html.erb
@@ -14,7 +14,7 @@ title: Kassiopé Project
 
 
 <div class="text">
-	<p>Voici les récits de nos aventures. La première était pendant l'été 2016 et la seconde aura lieu durant l'hiver 2018.</p>
+	<p>Voici les récits de nos aventures. La première était pendant l'été 2016 et la seconde aura lieu entre janvier et mai 2018.</p>
 </div>
 
 
@@ -26,10 +26,60 @@ title: Kassiopé Project
 
     <div class="tab-content primary-text blog">
         <div id="tab1" class="tab active">
+        	
+        	<br>
         	<p>
-        		Notre aventure 2018 en Inde n'a pas commencé encore, c'est pour cela que nous avons besoin de votre aide avec le crowdfunding (sur la page d'accueil). Elle aura lieu entre Janvier et Mars. Nous posterons régulièrement les avancées du projet sur cette page.
-        		Suivez-nous également sur Facebook et Instagram pour en apprendre d'avantage car nous posterons tous les jours.
+        		Notre aventure 2018 en Inde est en cours avec différente phases du projet qui se mettent en place petit à petit. Nous postons reguliérement sur cette page ainsi que sur Facebook et Instagram. 
         	</p>
+			
+      		<br>
+
+        	<h3>7 février 2018</h3>
+        		<br>
+        		<p>Notre première session est un succès !</p>
+
+				<p>Leçon de cette semaine: faire confiance aux obstacles que la vie jète chaque jour - ceux-ci vous mèneront exactement là où vous devez être.</p>
+				<p>Cette semaine, le vent à poussé notre projet dans plusieurs directions, et même si le vent ne semblaient pas souffler en notre faveur les quelques premiers jours, le projet a maintenant toutes les resources nécessaires pour grandir et devenir auto-suffisant. </p>
+
+				<p style="text-indent: 3em;">Le premier jour (mercredi 31), notre lampe à fente est tombée en panne, rendant les dépistages de la cataracte impossibles. Mais un appel à un fournisseur Chinois a changé la donne lorsqu’il nous a mis en contact avec un de ses partenaires à Ahmedabad. Ainsi, nous sommes parvenu à nous en procurer une neuve et identique le soir-même.
+				Le lendemain, l’ampoule sur cette même lampe à fente a cessé de fonctionner. Un technicien est immédiatement venu la réparer. 
+				Le même après-midi, notre auto-réfractomètre (la machine dont nous nous servons pour faire les examens de vue) a cessé elle aussi de fonctionner. Après un peu de bricolage très rustique, celle-ci a recommencé à fonctionner tant bien que mal. 
+				Vendredi, suite a un malentendu, nous nous sommes rendu-compte que le prix demandé par notre clinique partenaire pour les chirurgies de la cataracte dépassait notre budget et rendrait toute forme de durabilité du projet impossible. Vendredi midi, suite à une conversation avec un des fondateurs de Manav Sadhna, Viren Bhai, nous avons été mis en contact avec un autre hôpital ainsi qu’une une clinique privée. Après une première rencontre avec ces deux établissements samedi matin, tous deux acceptèrent d’opérer gratuitement, sans conditions et pour une durée indéterminée tous les patients que nous venions de dépisté et que nous dépisterions à l’avenir. Non seulement cette opportunité était une solution pour notre problème financier mais elle apportait en parallèle une perspective durable au projet Kassiopé car nous allions pouvoir continuer à travailler avec ces institutions indéfiniment à prix réduit.</p>
+
+				<p>Après tant de freins, le destin a joué en notre faveur et nous avons pût continuer nos examens. Conclusion: 182 patients examinés en six jours, dont 60 cataractes et plus d’une centaine nécessitant des lunettes. </p>
+
+				<p>Durant le prochain mois nous allons:
+				<br>1.  Amener nos patients à l’hôpital pour qu’il soient opérer.
+				<br>2.  Amener nos patients chez des opticiens pour qu’il reçoivent des lunettes.
+				<br>3.  Continuer à effectuer des tests sur des élèves de la communauté.
+				<br>4.  Préparer la deuxième session d’examens et de chirurgies de la cataracte, prévue pour Avril.</p>
+
+				<p>Nous espérons que cette expérience continuera de nous ouvrir les yeux autant que les yeux de centaines de patients ont été ouvert par votre aide.</p>
+
+				<p>Un grand merci à tous,
+				<br>L’équipe Kassiopé</p>
+   
+			<br><br>
+
+        	<h3>29 janvier 2018</h3>
+        		<br>
+        		<p>Bonjour,</p>
+
+				<p>Il y a peu d’expériences plus satisfaisantes que de voir un arbre grandir à partir d’une graine que nous avons planté.</p>
+
+				<p style="text-indent: 3em;">Nous sommes arrivés à Ahmedabad il y a cinq jours et c’est extrêmement gratifiant de contempler le fruit du travail de notre dernière intervention à Manav Sadhna. Nous avons appris à notre arrivé que les lunettes achetées pendant la dernière intervention de Kassiopé, ont toutes été distribuées à travers la communauté. De plus, l’auto-réfractomètre (la machine donné par Le Visiologiste pour nous aider à effectuer les tests d’acuités visuels) qui avait été donné à Manav Sadhna, a été utilisée à plusieurs occasions par d’autres ophtalmologistes et optométristes volontaires pour continuer les tests dans d’autres bidonvilles d’Ahmedabad. </p>
+
+				<p style="text-indent: 3em;">Nous avons reçu un accueil chaleureux par la communauté et nous travaillons à mettre en place les infrastructures afin de débuter notre projet cette semaine. </p>
+
+				<p style="text-indent: 3em;">Notre première optométriste arrive demain soir et nous allons commencer les dépistages de la cataracte mercredi matin. 
+				Nous espérons examiner une cinquantaine de patients au Tekro Community Center (un des centres satellites de Manav Sadhna) et si tout se passe correctement, nous comptons faire des dépistages sur 70 autres patients dans la semaine. </p>
+
+				<p>D’autres nouvelles et informations arriverons très vite!!!</p>
+
+				<p>Un grand merci pour tous les yeux qui ont été ouverts par votre aide,
+				<br>L’équipe Kassiopé</p>
+
+			<br><br>
 
         </div>
         <div id="tab2" class="tab">
