--- a/source/en/en-adventure.html.erb
+++ b/source/en/en-adventure.html.erb
@@ -7,14 +7,64 @@ title: Kassiopé Project
   <meta charset="utf-8">
 </head>
 <body>
-  <div class="article">
-    <%= image_tag "journal-yvelines.jpg", class:"article-yvelines", alt:"Photo de notre journal" %>
+  
+  <div class="primary-text blog">
 
-  </div>
-
-  <div class="issue-text primary-text">
+    <h2>
+      Our next adventure will take place between January and Mai 2018 with different stages. We will regularly post updates here, on facebook and on instagram
+    </h2>
     
-  </div>
+    <br><br>
+
+    <h3>7th February 2018</h3>
+      <br>
+      <p>Our first session is a success!</p>
+
+      <p>Perhaps the most important thought we’ve had to start living with this week was: trust life’s obstacles to take you right where you need to be. </p>
+
+      <p style="text-indent: 3em;">This week, life pushed our project around in many different directions, and although the wind seemed to blow us off course at first, the project now has all the light and water it needs in order to grow it roots deep and make itself sustainable.</p> 
+
+      <p style="text-indent: 3em;">Our first day (Wednesday 31th) our slit lamp broke down, impeding us from carrying out cataract screenings. So we got a call from a supplier in China who had retailers in Ahmedabad, and by the end of the day we had an identical slit lamp to the one we’d purchased in France - all for a lot fairer price. 
+      On Thursday, the lamp on the slit lamp broke down. So, by noon a technician had come to fix it. 
+      That same afternoon, our autorefractometer (the machine we use to carry out our eye exams) stopped functioning correctly. So we peeled away parts on the machine’s joystick and it started working again. 
+      On Friday, do to a misunderstanding we realized that the price it would take us to carry out all our surgeries would be out of our budget, and would impede any form of sustainibility for our project. So at noon, subsequent to a random conversation with one of Manav Sadhna’s founders Viren Bhai, we were put into contact with both a hospital and private clinic. After meeting them on Saturday, both offered to carry out surgeries for free and indefinetley for our patients. Not only was this a solution to our financial issue, but it was also a sustainable solution for the Kassiopé Project as it will now be possible to continue working with them indefinetely at a very low cost.</p>
+
+      <p style="text-indent: 3em;">So after every blow we received, life smiled at us, and we succesfullly carried out screenings and eye exams for 182 patients, diagnosing 60 with cataracts, over a hundred in need of glasses, and 8 with various other pathologies.</p> 
+
+      <p>Over the next month we will be:
+      <br>1.  Taking our patients to the hospital for surgery
+      <br>2.  Taking our patients to the optican for glasses.
+      <br>3.  Carrying out eye tests for students in need.
+      <br>4.  Preparing the 2nd session of screenings and surgeries, scheduled for April/May.</p>
+
+      <p>May this experience continue opening our eyes just as much as you’ve been helping open the eyes of hundreds of people. </p>
+
+      <p>A heartfelt thank you,
+      <br>The Kassiopé Team</p>
+
+    <br><br>
+
+    <h3>29th January 2018</h3>
+      <br>
+      <p>Hello!</p> 
+
+      <p>There are not many experiences more fulfilling than watching a mighty tree grow out of a tiny seed you’ve planted. </p>
+         
+      <p style="text-indent: 3em;">It’s been four days since we’ve landed in Ahemedabad and it’s been profoundly gratifying to contemplate the fruit of last year’s work. We learned upon our arrival that all the glasses we had purchased during Kassiopé’s previous eye camp have succesfully been distributed throughout the community. Furthermore, the autorefractometer (the machine donated by LeVisiologiste to help us carry out eye tests) which we had given to Manav Sadhna, had been used many times by various volunteer ophtalmologists/optometrists in order to carry out eye tests throughout different slums.</p>
+        
+      <p style="text-indent: 3em;">We received a heartwarming welcome from the Manav Sadhna comunity upon our arrival and have since started to pull all the required infrastructure together in order to start the project this week. <p>
+      
+      <p style="text-indent: 3em;">Our first optometrist is arriving tomorow night, and we will be carrying out our first cataract screenings as of Wednesday morning.
+      We are planning to see 50 patients at the Tekro Community center (one of Manav Sadhna’s satelite community center’s) and if all goes well we will go on to another 70 patients the following days.</p>
+        
+      <p>More news will be coming soon! </p>
+        
+      <p>A heartfelt thank you for all the eyes that have been opened through your help,
+      <br>The Kassiopé team</p>
+    <br><br>
+
+  </div>    
+
 
   <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
