--- a/source/stylesheets/pages/_adventure.css.scss
+++ b/source/stylesheets/pages/_adventure.css.scss
@@ -24,6 +24,18 @@
   }
 }
 
+.img-blog-2018 {
+  width: 100%;
+  height: 100%;
+  margin-bottom: 25px;
+  @media screen and (max-width:1000px) {
+    height: 100px;
+  }
+  @media screen and (max-width: 750px) {
+    height: 100px;
+  }
+}
+
 .panorama {
   height: 150px;
 }
