--- a/source/stylesheets/pages/_adventure.css.scss
+++ b/source/stylesheets/pages/_adventure.css.scss
@@ -26,13 +26,13 @@
 
 .img-blog-2018 {
   width: 100%;
-  height: 100%;
+  height: auto;
   margin-bottom: 25px;
   @media screen and (max-width:1000px) {
-    height: 100px;
+    height: auto;
   }
   @media screen and (max-width: 750px) {
-    height: 100px;
+    height: auto;
   }
 }
 
