--- a/source/fr-adventure.html.erb
+++ b/source/fr-adventure.html.erb
@@ -63,16 +63,16 @@ title: Kassiopé Project
 
 					<div class="container-fluid">
 
-						<div class="col-xs-6">
+						<div class="col-md-6">
         					<%= image_tag "test_visuel.jpg", class:"img-blog-2018", alt:"Matthew executant un test d'acuité visuel" %>
         					<p><br>Matthew et Fiona (notre optométriste) faisant les tests d'acuité visuelle sur les premiers patients mercredi<br><br><br><br></p>
         					<%= image_tag "matthew_et_fiona.jpg", class:"img-blog-2018", alt:"Matthew et Fiona montrant les lettres du tests" %>
         				</div>
-   						<div class="col-xs-6">
+   						<div class="col-md-6">
         					<%= image_tag "fiona_lunettes.jpg", class:"img-blog-2018", alt:"Fiona régle des lunettes" %>
         				</div>
         				<br>
-        				<div class="col-xs-6">
+        				<div class="col-md-6">
         					<%= image_tag "matthew_regle_lunettes.jpg", class:"img-blog-2018", alt:"Matthew régle des lunettes" %>
         				</div>
         			</div>
@@ -103,15 +103,15 @@ title: Kassiopé Project
 
 					<div class="container-fluid">
 
-						<div class="col-xs-6">
+						<div class="col-md-6">
         					<%= image_tag "Filles.jpg", class:"img-blog-2018", alt:"Des filles du centre nous souhaitant aurevoir" %>
         					<p><br><br>Quelques photos d'enfants que nous avons rencontré dans les bidons-villes et les différents centres de Manav Sadhna<br><br><br></p>
         					<%= image_tag "petite_fille_qui_marche.jpg", class:"img-blog-2018", alt:"Petite fille se baladant dans le centre" %>
         				</div>
-        				<div class="col-xs-6">
+        				<div class="col-md-6">
         					<%= image_tag "enfants_attendent.jpg", class:"img-blog-2018", alt:"Un groupe d'écoliers attendant tous dans la même direction" %>
         				</div>
-        				<div class="col-xs-6">
+        				<div class="col-md-6">
         				<%= image_tag "conversation.jpg", class:"img-blog-2018", alt:"COnversation avec une fille du centre" %>
         				</div>
         			</div>
