--- a/source/fr-adventure.html.erb
+++ b/source/fr-adventure.html.erb
@@ -65,7 +65,7 @@ title: Kassiopé Project
 
 						<div class="col-md-6">
         					<%= image_tag "test_visuel.jpg", class:"img-blog-2018", alt:"Matthew executant un test d'acuité visuel" %>
-        					<p><br>Matthew et Fiona (notre optométriste) faisant les tests d'acuité visuelle sur les premiers patients mercredi<br><br><br><br></p>
+        					<p><br>Matthew et Fiona (notre orthoptiste) faisant les tests d'acuité visuelle sur les premiers patients mercredi<br><br><br><br></p>
         					<%= image_tag "matthew_et_fiona.jpg", class:"img-blog-2018", alt:"Matthew et Fiona montrant les lettres du tests" %>
         				</div>
    						<div class="col-md-6">
@@ -91,7 +91,7 @@ title: Kassiopé Project
 
 					<p style="text-indent: 3em;">Nous avons reçu un accueil chaleureux par la communauté et nous travaillons à mettre en place les infrastructures afin de débuter notre projet cette semaine. </p>
 
-					<p style="text-indent: 3em;">Notre première optométriste arrive demain soir et nous allons commencer les dépistages de la cataracte mercredi matin. 
+					<p style="text-indent: 3em;">Notre première orthoptiste arrive demain soir et nous allons commencer les dépistages de la cataracte mercredi matin. 
 					Nous espérons examiner une cinquantaine de patients au Tekro Community Center (un des centres satellites de Manav Sadhna) et si tout se passe correctement, nous comptons faire des dépistages sur 70 autres patients dans la semaine. </p>
 
 					<p>D’autres nouvelles et informations arriverons très vite!!!</p>
@@ -112,7 +112,7 @@ title: Kassiopé Project
         					<%= image_tag "enfants_attendent.jpg", class:"img-blog-2018", alt:"Un groupe d'écoliers attendant tous dans la même direction" %>
         				</div>
         				<div class="col-md-6">
-        				<%= image_tag "conversation.jpg", class:"img-blog-2018", alt:"COnversation avec une fille du centre" %>
+        				<%= image_tag "conversation.jpg", class:"img-blog-2018", alt:"Conversation avec une fille du centre" %>
         				</div>
         			</div>
 
