--- a/source/en/en-adventure.html.erb
+++ b/source/en/en-adventure.html.erb
@@ -42,8 +42,24 @@ title: Kassiopé Project
       <p>A heartfelt thank you,
       <br>The Kassiopé Team</p>
 
-    <br><br>
+      <br>
+      <div class="container-fluid">
 
+        <div class="col-md-6">
+          <%= image_tag "test_visuel.jpg", class:"img-blog-2018", alt:"Matthew doing a visual acuity test" %>
+          <p><br>Matthew and Fiona (our orthoptist) doing some visual acuity tests on our first patients on wednesday<br><br><br><br></p>
+          <%= image_tag "matthew_et_fiona.jpg", class:"img-blog-2018", alt:"Matthew and Fiona showing the different signs a patient has to see"%>
+        </div>
+        <div class="col-md-6">
+          <%= image_tag "fiona_lunettes.jpg", class:"img-blog-2018", alt:"Fiona adjusting a patient's glasses" %>
+        </div>
+        <br>
+        <div class="col-md-6">
+          <%= image_tag "matthew_regle_lunettes.jpg", class:"img-blog-2018", alt:"Matthew adjusting glasses" %>
+        </div>
+      </div>
+
+    <br><br>
     <h3>29th January 2018</h3>
       <br>
       <p>Hello!</p> 
@@ -61,7 +77,23 @@ title: Kassiopé Project
         
       <p>A heartfelt thank you for all the eyes that have been opened through your help,
       <br>The Kassiopé team</p>
-    <br><br>
+      <br>
+
+      <div class="container-fluid">
+
+        <div class="col-md-6">
+          <%= image_tag "Filles.jpg", class:"img-blog-2018", alt:"Girls from the center wishing us goodbye" %>
+          <p><br><br>A couple of photos of the kids we've met in the slums and the different Manav Sadhna community centers<br><br><br></p>
+         <%= image_tag "petite_fille_qui_marche.jpg", class:"img-blog-2018", alt:"Little girl walking in the center"%>
+        </div>
+        <div class="col-md-6">
+          <%= image_tag "enfants_attendent.jpg", class:"img-blog-2018", alt:"A groupe of school students waiting" %>
+        </div>
+        <div class="col-md-6">
+          <%= image_tag "conversation.jpg", class:"img-blog-2018", alt:"Conversation with a girl from the center" %>
+        </div>
+      </div>
+      <br><br>
 
   </div>    
 
