nouvelle description pour le Visio

--- a/source/fr-about_us.html.erb
+++ b/source/fr-about_us.html.erb
@@ -49,14 +49,14 @@ title: Kassiopé Project
         <li>Pour l'accueil enthousiaste de notre projet dans leur communauté.</li>
         <li>Pour nous aider à maintenir ce projet à long terme.</li>
       </ul>
+      <li>Le Visiologiste :</li>
+      <ul>
+        <li>LeVisiologiste est une entreprise française qui a pour but de créer des cliniques ophtalmologiques en France. LeVisiologiste a été d’une importance cruciale dans la construction du projet Kassiopé durant les trois dernières années, que cela soit en nous permettant de faire des stages dans leurs cliniques afin d’avoir assez de pratique dans l’exécution de tests d’acuité visuel, ou en faisant des donations d’équipements (tel que notre autoréfractomètre). Nous ne pourrions pas entreprendre ce projet sans eux. Cette année, LeVisiologiste a même envoyé une employée (une orthoptiste) afin d’aller plus loin dans nos dépistages (cataracte et ptérygion). Un grand merci au Visiologiste pour leur aide, soutien et implication dans nos projets.</li>
+      </ul>
       <li>MXOphtalmic : </li>
       <ul>
         <li>Pour avoir fait des dons de lunettes</li>
         <li>Pour avoir fait le don d’un autoréfractomètre</li>
-      </ul>
-      <li>Le Visiologiste :</li>
-      <ul>
-        <li>Pour nous avoir proposé des stages d’entraînements aux tests d’acuité visuelle</li>
       </ul>
       <li>The Ahmedabad Eye Laser Hospital :</li>
       <ul>
