new description for Levisiologiste

--- a/source/en/en-about_us.html.erb
+++ b/source/en/en-about_us.html.erb
@@ -65,14 +65,14 @@ title: Kassiopé Project
         <li>For hosting our project in Ahmadabad and helping with coordination.</li>
         <li>For maintaining our project on a long-term basis.</li>
       </ul>
+      <li>Le Visiologiste</li>
+      <ul>
+        <li>Le Visiologiste is a French company in charge of creating ophtalmological clinics in France. Le Visiologiste has been of primary importance to the construction of the Kassiopé project over the past three years. Whether it be in offering us internships in their clinics in order for us to acquire sufficient skills to perform eye exams, or whether it be coordinating and donating equipment to us (such as the autorefractometer). We would not be able to sustain this project without them. This year LeVisiologiste went all the way to send one of their staff members (an Orthoptist) in order for us to screen patients for further pathologies (such as cataracts and pterygion). Thank you to the Visiologiste for being so present and involved in this project and for developing such a sustainable relationship to our project.</li>
+      </ul>
       <li>MXOphtalmic : </li>
       <ul>
         <li>For donating glasses for the clinic.</li>
         <li>For donating an autorefractometer.</li>
-      </ul>
-      <li>Le Visiologiste</li>
-      <ul>
-        <li>For training us on eye exams.</li>
       </ul>
       <li>The Ahmedabad Eye Laser Hospital:</li>
       <ul>
