--- a/source/fr-adventure.html.erb
+++ b/source/fr-adventure.html.erb
@@ -34,6 +34,51 @@ title: Kassiopé Project
 			
       		<br>
       		<div class="container-fluid">
+
+      			<h3>5 mars 2018</h3>
+      				<br>
+      				<p>Bonjour à tous,</p>
+
+      				<p>Plus on passe du temps à Manav Sadhna, plus on réalise que le projet Kassiopé n’est qu’un arbre aidant une forêt à pousser.</p>
+
+      				<p style="text-indent: 3em;">Durant les trois dernières semaines nous avons continué les tests d’acuité visuelle sur les enfants des différents centres satellites de Manav Sadhna. Nous avons couvert deux centres avec un total d’une soixantaine d’enfants nécessitant des lunettes. Durant ce temps, Raman (notre coordinateur sur place) a fait beaucoup d’aller-retour à l’hôpital afin d’amener nos patients les plus âgés pour des tests plus approfondies et des chirurgies. Cette semaine, nous allons finir les derniers examens de vue dans un troisième centre et également distribuer des lunettes.</p>
+
+      				<p style="text-indent: 3em;">Comme d’habitude, nous faisons face à des imprévus (patients peu coopératifs, un téléphone tombant en panne, la chaleur accablante(35-40 °C), plusieurs fêtes et festivals ainsi que d’autres petits projets nous empêchant de travailler certains jours…) mais nous avons également accompli de belles réussites. Par exemple, les tests que nous avons entrepris sur les patients plus âgés nous ont permis de dépister d’autres pathologies, ainsi certains patients que nous avions d’abord amener à l’hôpital pour une cataracte sont maintenant traités pour du diabète, des pressions sanguines trop élevées, du glaucome et autres…
+					Des festivals ont perturbés nos plans durant la semaine, mais nous ont donné du temps pour nous reposer car la chaleur commençait à avoir raison de notre santé. D’autres projets que Manav Sadhna entreprend nous ont également ralenti dans notre progression.</p>
+
+					<p>Voici quelques projets dans lesquels nous avons également participé:
+					<br>1.  « earn and learn », projet d’arts plastiques pour les enfants qui ont besoin de soutenir économiquement leur famille mais qui souhaite aussi recevoir une éducation.
+					<br>2.  Sensibilisation des élèves sur la gestion des déchets et du recyclage.
+					<br>3.  Distribution de repas dans différentes communautés des bidonvilles.
+					<br>4.  Visites d’enfants à l’hôpital atteint d’un cancer afin de passer du temps avec eux.
+					<br>5.  Créer des sessions de massages et de soins pour les femmes des bidonvilles qui travaillent sans relâche.</p>
+
+					<p style="text-indent: 3em;">Tout comme nous sommes aller travailler sur d’autres projets, d’autres volontaires nous ont également aidés dans l’élaboration du projet Kassiopé. Certains nous ont aidés pour les traductions, d’autres nous ont aidés pour le transport de patients et de matériel, d’autres encore sur le terrain pour la prise en charge des patients. Une des volontaires (une infirmière de profession) a proposé son aide en sensibilisant les enfants sur des gestes simples pour protéger et nettoyer les yeux, car l’air sec et la pollution créer de nombreuses infection et irritations dans nos communautés.</p>
+					<p>Au final, tous les volontaires donnent et reçoivent de chacun des projets et aident cet écosystème à évoluer.</p>
+
+					<p>Un grand merci à tous,
+					<br>L’équipe Kassiopé</p>
+
+					<br><br>
+
+					<div class="container-fluid">
+
+						<div class="col-md-6">
+        					<%= image_tag "update5mars-2.jpg", class:"img-blog-2018", alt:"Rencontres" %>
+        					<%= image_tag "update5mars-4.jpg", class:"img-blog-2018", alt:"Rencontres" %>
+        				</div>
+						<div class="col-md-6">
+        					<%= image_tag "update5mars-1.jpg", class:"img-blog-2018", alt:"Rencontres" %>
+        					<p>Voici quelques photos de personnes qui participent et bénéficient de ce merveilleux écosystème</p>
+        					<%= image_tag "update5mars-3.jpg", class:"img-blog-2018", alt:"Rencontres" %>
+        					<%= image_tag "update5mars-5.jpg", class:"img-blog-2018", alt:"Rencontres" %>
+        				</div>
+        			</div>
+        		</div>
+
+
+        	<div class="container-fluid">
+
         		<h3>7 février 2018</h3>
         			<br>
         			<p>Notre première session est un succès !</p>
