--- a/source/en/en-adventure.html.erb
+++ b/source/en/en-adventure.html.erb
@@ -16,6 +16,48 @@ title: Kassiopé Project
     
     <br><br>
 
+    <h3>5th March 2018</h3>
+    	<br>
+    	<p>Hello!</p>
+
+    	<p>The more we spend time working at the Manav Sadhna community in Ahmedabad, the more we see how the Kassiopé project is a single tree helping an entire forest grow.</p>
+
+    	<p style="text-indent: 3em;">Over the past three weeks we’ve continued carrying out our eye exams with children from different centers. We’ve covered two centers with a total of 60 students in need for glasses. Meanwhile, Raman (our main local coordinator) has gone in and out of the hospital, taking our elederly patients for check-ups and surgeries. This week we will be finishing the eye exams on a third community center as well as distributing glasses to them.</p>
+
+    	<p style="text-indent: 3em;">As always we faced unexpected hardships (lots of patients not cooperating, my phone breaking down, the increasingly unbearable heat (35-40°C), various festivals and other projects that get in the way of our weekly objectives…), but also, unexpected achievements. For example, the eye check-ups that we’ve performed on the elderly at the hospital have allowed us to unearth many more pathologies than expected - some of our patients which we had originally taken to the hospital for cataract surgeries are now being treated for diabetes, high blood pressure, glaucoma and various other pathologies which would have stayed insiduously uncovered otherwise. Festivals disrupting our plans during the week have given us a few days off and rest as the heat was starting to attack our health. Other projects that Manav Sadhna is running have impeded us from working on certain days, but have also allowed us to go work on various other projects in the community.</p>
+
+
+    	<p>Some other projects we’ve helped with:
+    		<br>1.  Paricipating in arts & crafts projects for Manav Sadhna’s « earn and learn » program (a curriculum adapted to children who both need to help sustain their family financially, but also want to get an education).
+    		<br>2.  Raising awareness about waste management issues for sudents.
+    		<br>3.  Food distribution in the evenings for different slum communites
+    		<br>4.  Spending time in hospitals with children receiving cancer treatments
+    		<br>5.  creating a spa treatment and massage session for hardworking slum-women.</p>
+
+		<p style="text-indent: 3em;">Just as we have been participating in other people’s projects, other volunteers have come in and out to particpate on our project. Some have helped us with translations, some have helped with transporting patients and our equipment, others with some of our eye camp’s logistics. One volunteer (a nurse) has offered to help raise awareness in classrooms about cleaning our eyes properly. And in the end all volunteers give and receive from eachother’s projects, helping one single ecosystem evolve.</p>
+
+		<p>A heartfelt thank you for following us during this journey,
+		<br>The Kassiopé Team</p>
+
+    <br><br>
+
+    <div class="container-fluid">
+
+        <div class="col-md-6">
+            <%= image_tag "update5mars-2.jpg", class:"img-blog-2018", alt:"HumansR" %>
+            <%= image_tag "update5mars-4.jpg", class:"img-blog-2018", alt:"Humans" %>
+        </div>
+        <div class="col-md-6">
+            <%= image_tag "update5mars-1.jpg", class:"img-blog-2018", alt:"Humans" %>
+            <p>Attached are a few portraits of the people who inhabit and benefit from this beautifully orchestrated ecosystem</p>
+            <%= image_tag "update5mars-3.jpg", class:"img-blog-2018", alt:"Humans" %>
+            <%= image_tag "update5mars-5.jpg", class:"img-blog-2018", alt:"Humans" %>
+        </div>
+    </div>
+
+
+    <br><br>
+
     <h3>7th February 2018</h3>
       <br>
       <p>Our first session is a success!</p>
